[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/right.png" type="Texture" id=1]
[ext_resource path="res://UI/Scripts/CommandHUD.gd" type="Script" id=2]
[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/left.png" type="Texture" id=3]
[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/up.png" type="Texture" id=4]
[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/down.png" type="Texture" id=5]
[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/jump.png" type="Texture" id=6]
[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/land.png" type="Texture" id=7]
[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/altp.png" type="Texture" id=8]
[ext_resource path="res://UI/Assets/Sci-Fi Game Icons/altm.png" type="Texture" id=9]

[node name="CommandHUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Directions" type="Control" parent="."]
anchor_left = 0.0546875
anchor_top = 0.64
anchor_right = 0.241688
anchor_bottom = 0.96
margin_left = -8.0
margin_top = 80.0
margin_right = -159.488
margin_bottom = -72.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Up" type="TextureButton" parent="Directions"]
anchor_left = 2.701
anchor_top = -1.0
anchor_right = 2.701
anchor_bottom = -1.0
margin_left = -28.0414
margin_top = -24.0
margin_right = 158.959
margin_bottom = 136.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="TextureButton" parent="Directions"]
anchor_left = 2.701
anchor_top = 1.595
anchor_right = 2.701
anchor_bottom = 1.595
margin_left = -28.0414
margin_top = -24.0
margin_right = 158.959
margin_bottom = 136.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Left" type="TextureButton" parent="Directions"]
anchor_left = 1.2
anchor_top = 0.301
anchor_right = 1.2
anchor_bottom = 0.301
margin_left = -16.0006
margin_top = -28.04
margin_right = 143.999
margin_bottom = 158.96
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureButton" parent="Directions"]
anchor_left = 4.0025
anchor_top = 0.299997
anchor_right = 4.0025
anchor_bottom = 0.299997
margin_left = -24.0021
margin_top = -28.0
margin_right = 135.998
margin_bottom = 158.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.75
anchor_top = 0.653333
anchor_right = 0.937
anchor_bottom = 0.973333
margin_left = -8.0
margin_top = 80.0
margin_right = -159.488
margin_bottom = -72.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Altp" type="TextureButton" parent="Control"]
anchor_left = 2.587
anchor_top = -1.6
anchor_right = 2.587
anchor_bottom = -1.6
margin_left = -31.48
margin_top = -31.9999
margin_right = 178.52
margin_bottom = 208.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="TextureButton" parent="Control"]
anchor_left = 2.587
anchor_top = 1.9
anchor_right = 2.587
anchor_bottom = 1.9
margin_left = -31.48
margin_top = -35.9999
margin_right = 178.52
margin_bottom = 204.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Land" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.3
margin_left = -32.0
margin_top = -36.0
margin_right = 178.0
margin_bottom = 204.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Altm" type="TextureButton" parent="Control"]
anchor_left = 4.2
anchor_top = 0.3
anchor_right = 4.2
anchor_bottom = 0.3
margin_left = -32.0
margin_top = -36.0
margin_right = 178.0
margin_bottom = 204.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Pause" type="TextureButton" parent="."]
margin_left = 512.0
margin_top = 504.0
margin_right = 552.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Directions/Up" to="." method="_on_Up_button_down"]
[connection signal="button_up" from="Directions/Up" to="." method="_on_Up_button_up"]
[connection signal="button_down" from="Directions/Down" to="." method="_on_Down_button_down"]
[connection signal="button_up" from="Directions/Down" to="." method="_on_Down_button_up"]
[connection signal="button_down" from="Directions/Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="Directions/Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="Directions/Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="Directions/Right" to="." method="_on_Right_button_up"]
[connection signal="button_down" from="Control/Altp" to="." method="_on_Altp_button_down"]
[connection signal="button_up" from="Control/Altp" to="." method="_on_Altp_button_up"]
[connection signal="button_down" from="Control/Jump" to="." method="_on_Jump_button_down"]
[connection signal="button_up" from="Control/Jump" to="." method="_on_Jump_button_up"]
[connection signal="button_down" from="Control/Land" to="." method="_on_Land_button_down"]
[connection signal="button_up" from="Control/Land" to="." method="_on_Land_button_up"]
[connection signal="button_down" from="Control/Altm" to="." method="_on_Altm_button_down"]
[connection signal="button_up" from="Control/Altm" to="." method="_on_Altm_button_up"]
[connection signal="button_down" from="Pause" to="." method="_on_Pause_button_down"]
[connection signal="button_up" from="Pause" to="." method="_on_Pause_button_up"]
